tests/ui/try-trait/option-to-result.stderr
error[E0277]: the `?` operator can only be used on `Result`s, not `Option`s, in a function that returns `Result`
  --> $DIR/option-to-result.rs:5:6
   |
LL | fn test_result() -> Result<(),()> {
   | --------------------------------- this function returns a `Result`
LL |     let a:Option<()> = Some(());
LL |     a?;
   |      ^ use `.ok_or(...)?` to provide an error compatible with `Result<(), ()>`
   |
help: item with same name found
  --> $SRC_DIR/std/src/sync/barrier.rs:LL:COL
   = note: perhaps two different versions of crate `std` are being used?
help: item with same name found
  --> $SRC_DIR/core/src/../../stdarch/crates/core_arch/src/x86/cpuid.rs:LL:COL
   = note: perhaps two different versions of crate `core` are being used?
help: item with same name found
  --> $SRC_DIR/std/src/sync/mod.rs:LL:COL
   = note: perhaps two different versions of crate `std` are being used?

error[E0277]: the `?` operator can only be used on `Option`s, not `Result`s, in a function that returns `Option`
  --> $DIR/option-to-result.rs:11:6
   |
LL | fn test_option() -> Option<i32>{
   | ------------------------------- this function returns an `Option`
LL |     let a:Result<i32, i32> = Ok(5);
LL |     a?;
   |      ^ use `.ok()?` if you want to discard the `Result<Infallible, i32>` error information

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
